feita requisição get

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style/reset.css">
         <link rel="stylesheet" href="./style/estilos.css">
-        <link rel="stylesheet" href="./style/flexbox.css">
         <title>VidFlow</title>
         <meta name="author" content="Renan Santos" />
         <meta name="description" content="">
@@ -169,17 +167,17 @@
         <main>
             <section class="superior__secao__container">
                 <div class="superior__secao__container-wrapper">
-                    <a href="#" name="tudo" class="superior__item">tudo</a>
-                    <a href="#" name="debates" class="superior__item">debates</a>
-                    <a href="#" name="aovivo" class="superior__item">ao vivo</a>
-                    <a href="#" name="podcasts" class="superior__item">Podcasts</a>
-                    <a href="#" name="front-end" class="superior__item">front-end</a>
-                    <a href="#" name="mobile" class="superior__item">mobile</a>
-                    <a href="#" name="data-science" class="superior__item">data science</a>
-                    <a href="#" name="apps" class="superior__item">apps</a>
-                    <a href="#" name="programação" class="superior__item">programação</a>
-                    <a href="#" name="ia" class="superior__item">inteligência artificial</a>
-                    <a href="#" name="inovação" class="superior__item">inovação</a>
+                    <a href="#" name="Tudo" class="superior__item">Tudo</a>
+                    <a href="#" name="Debates" class="superior__item">Debates</a>
+                    <a href="#" name="Ao Vivo" class="superior__item">Ao Vivo</a>
+                    <a href="#" name="Podcasts" class="superior__item">Podcasts</a>
+                    <a href="#" name="Front-end" class="superior__item">Front End</a>
+                    <a href="#" name="Mobile" class="superior__item">Mobile</a>
+                    <a href="#" name="Data Science" class="superior__item">data science</a>
+                    <a href="#" name="Apps" class="superior__item">apps</a>
+                    <a href="#" name="Programação" class="superior__item">programação</a>
+                    <a href="#" name="inteligência Artificial" class="superior__item">inteligência artificial</a>
+                    <a href="#" name="Inovação" class="superior__item">inovação</a>
                 </div>
                 <label class="superior__slider">
                     <span>
@@ -187,6 +185,8 @@
                     </span>
                 </label>
             </section>
+
+            <section class="videos__container"></section>
         </main>
 </body>
 </html>
